First tutorial (Connecting to Centinela Wi-Fi is done)

--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -86,7 +86,7 @@
         <section class="blue-section" id="quickLinks-blueSection">
             <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="quickLinks-collapseToggle" checked="">
             <div class="section-header">
-                <h3>Connecting to Centinela W-Fi</h3>
+                <h3>Connecting to Centinela Wi-Fi</h3>
                 <label for="quickLinks-collapseToggle">
                     <div class="open-column-button"></div>
                 </label>
@@ -97,33 +97,35 @@
                     <h5 class="tutorialTitle-edition">Chromebook Edition</h5>
                 </header>
 
-                <header class="tutStepHeader">
-                    <p>01 <span>of 02</span></p>
-                    <h6>Locate &amp; Select Network</h6>
-                </header>
+                <div class="tutStep">
+                    <header class="tutStepHeader">
+                        <p>01 <span>of 02</span></p>
+                        <h6>Locate &amp; Select Network</h6>
+                    </header>
 
-                <figure>
-                    <img src="images/troubleshooting/connectingCent-firstStep01.jpg" alt="" class="img-responsive tutImage" />
-                    <img src="images/troubleshooting/connectingCent-firstStep02.jpg" alt="" class="img-responsive tutImage" />
-                    <figcaption>Click on the small panel in the bottom right &uarr; corner in order to open the control center shown above</figcaption>
-                </figure>
-                <a href=""><button>Download Connecting to Centinela Wi-Fi Tutorial</button></a>
+                    <figure>
+                        <img src="images/troubleshooting/connectingCent-firstStep01.jpg" alt="" class="img-responsive tutImage" />
+                        <img src="images/troubleshooting/connectingCent-firstStep02.jpg" alt="" class="img-responsive tutImage" />
+                        <figcaption>Click on the small panel in the bottom right &uarr; corner in order to open the control center shown above</figcaption>
+                    </figure>
+                    <a href=""><button>Download Connecting to Centinela Wi-Fi Tutorial</button></a>
+                </div>
+                <div class="tutStep">
+                    <header class="tutStepHeader">
+                        <p>02 <span>of 02</span></p>
+                        <h6>Enter Credentials &amp; Connect</h6>
+                    </header>
+                    <img src="images/troubleshooting/connectingCent-secondStep01.jpg" alt="" class="img-responsive tutImage" />
+                </div>
             </div>
-
-            <header class="tutStepHeader">
-                <p>02 <span>of 02</span></p>
-                <h6>Enter Credentials &amp; Connect</h6>
-            </header>
-
-            <img src="images/troubleshooting/connectingCent-secondStep01.jpg" alt="" class="img-responsive tutImage" />
         </section>
-
-        <!-- /. container-fluid -->
-        <div class="scrollArrow" title="Back to top">
-            <a id="arrow-link " href="#back-to-top">
-                <i class="fa fa-arrow-up" aria-hidden="true"></i>
-            </a>
-        </div>
+    </div>
+    <!-- /. container-fluid -->
+    <div class="scrollArrow" title="Back to top">
+        <a id="arrow-link " href="#back-to-top">
+            <i class="fa fa-arrow-up" aria-hidden="true"></i>
+        </a>
+    </div>
 </body>
 
 </html>
