Added color and a round shape to the download button

--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -108,8 +108,8 @@
                         <img src="images/troubleshooting/connectingCent-firstStep02.jpg" alt="" class="img-responsive tutImage" />
                         <figcaption>Click on the small panel in the bottom right &uarr; corner in order to open the control center shown above</figcaption>
                     </figure>
-                    <a href=""><button>Download Connecting to Centinela Wi-Fi Tutorial</button></a>
                 </div>
+
                 <div class="tutStep">
                     <header class="tutStepHeader">
                         <p>02 <span>of 02</span></p>
@@ -117,13 +117,13 @@
                     </header>
                     <img src="images/troubleshooting/connectingCent-secondStep01.jpg" alt="" class="img-responsive tutImage" />
                 </div>
+                <a class="dlTutLink" href="tutorialPDFs/Connecting_to_Centinela_WiFi_Chromebook.pdf"><button type="button" class="tutDLButton">Download this Tutorial</button></a>
             </div>
         </section>
     </div>
     <!-- /. container-fluid -->
     <div class="scrollArrow" title="Back to top">
         <a id="arrow-link " href="#back-to-top">
-            <i class="fa fa-arrow-up" aria-hidden="true"></i>
         </a>
     </div>
 </body>
