--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -84,7 +84,7 @@
         </div>
 
         <section class="blue-section" id="quickLinks-blueSection">
-            <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="quickLinks-collapseToggle" checked="">
+            <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="quickLinks-collapseToggle">
             <div class="section-header">
                 <h3>Connecting to Centinela Wi-Fi</h3>
                 <label for="quickLinks-collapseToggle">
@@ -104,9 +104,11 @@
                     </header>
 
                     <figure>
-                        <img src="images/troubleshooting/connectingCent-firstStep01.jpg" alt="" class="img-responsive tutImage" />
-                        <img src="images/troubleshooting/connectingCent-firstStep02.jpg" alt="" class="img-responsive tutImage" />
-                        <figcaption>Click on the small panel in the bottom right &uarr; corner in order to open the control center shown above</figcaption>
+                        <img src="images/troubleshooting/connectingCent-firstStep01.jpg" alt="The following is an image that explains step #1. For the first step in connecting to Centinela Wi-Fi on a chromebook, click on the small panel in the bottom right corner in order to ope the control center shown in the next step"
+                            class="img-responsive tutImage" />
+                        <img src="images/troubleshooting/connectingCent-firstStep02.jpg" alt="The following is an image that explains step #2. For the second step in connecting to Centinela Wi-Fi pn a chromebook, click on the network called 'Centinela.'" class="img-responsive tutImage"
+                        />
+                        <figcaption class="tutImageCaption">Click on the small panel in the bottom right &uarr; corner in order to open the control center shown above</figcaption>
                     </figure>
                 </div>
 
@@ -115,15 +117,31 @@
                         <p>02 <span>of 02</span></p>
                         <h6>Enter Credentials &amp; Connect</h6>
                     </header>
-                    <img src="images/troubleshooting/connectingCent-secondStep01.jpg" alt="" class="img-responsive tutImage" />
+                    <img src="images/troubleshooting/connectingCent-secondStep01.jpg" alt="The following is an image that explains step #3. For the third and final step in connecting to Centinela Wi-Fi, set PEAP as your EAP method, MSCHAPv2 as your Phase 2 authentication mode, and be sure to click the option named 'do not check' in the Server CA certificate. Then for the identity and password fields, provide your username and password. Then hit connect!"
+                        class="img-responsive tutImage" />
                 </div>
                 <a class="dlTutLink" href="tutorialPDFs/Connecting_to_Centinela_WiFi_Chromebook.pdf"><button type="button" class="tutDLButton">Download this Tutorial</button></a>
+            </div>
+        </section>
+        <section class="blue-section" id="allTools-blueSection">
+            <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="webAdmin-collapseToggle">
+            <div class="section-header">
+                <h3>ALL LINKS</h3>
+                <label for="webAdmin-collapseToggle">
+                            <div class="open-column-button"></div>
+                        </label>
+            </div>
+            <!-- <div class="row button-row admin-links" id="webAdminButtonRow"> -->
+            <div class="row admin-links" id="webAdminButtonRow">
+                <iframe class="google-sheet" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSW-9fpf8zhznBa1SnLZGsPPI6Bl0QVwE4Ntacetz42sKK0tH0emoPjPMqoiSJInaM3iysG56Ia-bYa/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false">
+                    </iframe>
             </div>
         </section>
     </div>
     <!-- /. container-fluid -->
     <div class="scrollArrow" title="Back to top">
         <a id="arrow-link " href="#back-to-top">
+            <i class="fa fa-arrow-up" aria-hidden="true"></i>
         </a>
     </div>
 </body>
