--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -123,6 +123,48 @@
                 <a class="dlTutLink" href="tutorialPDFs/Connecting_to_Centinela_WiFi_Chromebook.pdf"><button type="button" class="tutDLButton">Download this Tutorial</button></a>
             </div>
         </section>
+
+        <!-- <section class="blue-section" id="quickLinks-blueSection">
+            <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="quickLinks-collapseToggle">
+            <div class="section-header">
+                <h3>Restoring a Broken Wi-Fi Connection</h3>
+                <label for="quickLinks-collapseToggle">
+                        <div class="open-column-button"></div>
+                    </label>
+            </div>
+            <div class="row button-row centWiFiTut" id="quickLinksButtonRow">
+                <header>
+                    <h4 class="tutorialTitle">Restoring a Broken Wi-Fi Connection</h4>
+                    <h5 class="tutorialTitle-edition">Chromebook Edition</h5>
+                </header>
+
+                <div class="tutStep">
+                    <header class="tutStepHeader">
+                        <p>01 <span>of 02</span></p>
+                        <h6>Locate &amp; Select Network</h6>
+                    </header>
+
+                    <figure>
+                        <img src="images/troubleshooting/connectingCent-firstStep01.jpg" alt="The following is an image that explains step #1. For the first step in connecting to Centinela Wi-Fi on a chromebook, click on the small panel in the bottom right corner in order to ope the control center shown in the next step"
+                            class="img-responsive tutImage" />
+                        <img src="images/troubleshooting/connectingCent-firstStep02.jpg" alt="The following is an image that explains step #2. For the second step in connecting to Centinela Wi-Fi pn a chromebook, click on the network called 'Centinela.'" class="img-responsive tutImage"
+                        />
+                        <figcaption class="tutImageCaption">Click on the small panel in the bottom right &uarr; corner in order to open the control center shown above</figcaption>
+                    </figure>
+                </div>
+
+                <div class="tutStep">
+                    <header class="tutStepHeader">
+                        <p>02 <span>of 02</span></p>
+                        <h6>Forget Network &amp; Reconnect</h6>
+                    </header>
+                    <img src="images/troubleshooting/connectingCent-secondStep01.jpg" alt="The following is an image that explains step #3. For the third and final step in connecting to Centinela Wi-Fi, set PEAP as your EAP method, MSCHAPv2 as your Phase 2 authentication mode, and be sure to click the option named 'do not check' in the Server CA certificate. Then for the identity and password fields, provide your username and password. Then hit connect!"
+                        class="img-responsive tutImage" />
+                </div>
+                <a class="dlTutLink" href="tutorialPDFs/Connecting_to_Centinela_WiFi_Chromebook.pdf"><button type="button" class="tutDLButton">Download this Tutorial</button></a>
+            </div>
+        </section> -->
+
         <section class="blue-section" id="allTools-blueSection">
             <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="webAdmin-collapseToggle">
             <div class="section-header">
