Got the plus/minus sign animation back in the tutorial pages. Only problem now is that the container does not actually open when the button is clicked.

--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -84,15 +84,17 @@
         </div>
 
         <section class="blue-section troubleshooting" id="quickLinks-blueSection">
+            <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="quickLinks-collapseToggle">
+            <!-- <div class="blue-section-innerContainer"> -->
             <div class="section-header">
                 <h3>Connecting to Centinela Wi-Fi</h3>
                 <label for="quickLinks-collapseToggle">
-                    <div class="open-column-button"></div>
-                </label>
+                        <div class="open-column-button"></div>
+                    </label>
             </div>
 
             <div class="section-content">
-                <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="quickLinks-collapseToggle">
+                <!-- The input tag to open/close the container used to be here -->
                 <div class="row button-row centWiFiTut" id="quickLinksButtonRow">
                     <header class="tut-Header">
                         <h4 class="tutorialTitle">Connecting to Centinela Wi-Fi</h4>
@@ -125,7 +127,7 @@
                     <a class="dlTutLink" href="tutorialPDFs/Connecting_to_Centinela_WiFi_Chromebook.pdf"><button type="button" class="tutDLButton">Download this Tutorial (PDF)</button></a>
                 </div>
             </div>
-
+            <!-- </div> -->
         </section>
 
         <!-- <section class="blue-section" id="quickLinks-blueSection">
