Added an inner container. Update the single CSS rule to change the button icon upon opening. However, the container content still does not display.

--- a/student.html
+++ b/student.html
@@ -23,7 +23,7 @@
         <header class="navigation-bar-header">
             <nav class="navigation-bar">
                 <div class="navigation-bar-image-wrapper">
-                    <a class="navbar-logo-link" href="http://portal.centinela.k12.ca.us"><img class="img-responsive" id="navbar-logo" href="#" src="images/CV-600x600.png"></a>
+                    <a class="navbar-logo-link" href="student.html"><img class="img-responsive" id="navbar-logo" href="#" src="images/CV-600x600.png"></a>
                 </div>
                 <ul class="navigation-bar-ul">
                     <input class="checkbox-hack" id="menu-toggle" type="checkbox">
