Added an ID to the tutorial content element

--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -93,7 +93,7 @@
                     </label>
                 </div>
 
-                <div class="section-content">
+                <div class="section-content" id="connectingToCentinela-content">
                     <!-- The input tag to open/close the container used to be here -->
                     <header class="tut-Header">
                         <h4 class="tutorialTitle">Connecting to Centinela Wi-Fi</h4>
