Fixed mobile navigation menu links so that when you click on them it sends you the the proper sections in the staff.html page

--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -37,31 +37,31 @@
                     <li><a href="https://www.centinela.k12.ca.us/"><i class="fa fa-home" aria-hidden="true" id="home-icon"></i>CVUHSD Home</a></li>
                     <!--<li><a href="https://portal.centinela.k12.ca.us/staff.html">Staff Portal</a></li>-->
                     <li class="mobile-collapse-links">
-                        <a href="#quickLinks-blueSection">Quick Links</a>
+                        <a href="staff.html#quickLinks-blueSection">Quick Links</a>
                     </li>
                     <li class="mobile-collapse-links">
-                        <a href="#standardStaffTools-blueSection">Standard Staff Tools</a>
+                        <a href="staff.html#standardStaffTools-blueSection">Standard Staff Tools</a>
                     </li>
                     <li class="mobile-collapse-links">
-                        <a href="#administratorTools-blueSection">Administrator Tools</a>
+                        <a href="staff.html#administratorTools-blueSection">Administrator Tools</a>
                     </li>
                     <li class="mobile-collapse-links">
-                        <a href="#teacherTools-blueSection">Teacher Tools</a>
+                        <a href="staff.html#teacherTools-blueSection">Teacher Tools</a>
                     </li>
                     <li class="mobile-collapse-links">
-                        <a href="#classRoomTools-blueSection">Classroom Tools</a>
+                        <a href="staff.html#classRoomTools-blueSection">Classroom Tools</a>
                     </li>
                     <li class="mobile-collapse-links">
-                        <a href="#learningTools-blueSection">Learning Tools</a>
+                        <a href="staff.html#learningTools-blueSection">Learning Tools</a>
                     </li>
                     <li class="mobile-collapse-links">
-                        <a href="#digitalTextbooks-blueSection">Digital Textbooks</a>
+                        <a href="staff.html#digitalTextbooks-blueSection">Digital Textbooks</a>
                     </li>
                     <li class="mobile-collapse-links">
-                        <a href="#mediaResources-blueSection">Digital Library Resources</a>
+                        <a href="staff.html#mediaResources-blueSection">Digital Library Resources</a>
                     </li>
                     <li class="mobile-collapse-links">
-                        <a href="#schoolWebsites-blueSection">School Websites</a>
+                        <a href="staff.html#schoolWebsites-blueSection">School Websites</a>
                     </li>
                     <li>
                         <a href="student.html" target="_blank">Student Portal</a>
