--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -83,12 +83,60 @@
             </header>
         </div>
 
-        <section class="blue-section troubleshooting" id="quickLinks-blueSection">
-            <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="quickLinks-collapseToggle">
+        <section class="blue-section troubleshooting">
+            <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="restoringABrokenWiFiConnection-collapseToggle">
+            <div class="blue-section-innerContainer">
+                <div class="section-header">
+                    <h3>Restoring a Broken Wi-Fi Connection</h3>
+                    <label for="restoringABrokenWiFiConnection-collapseToggle">
+                            <div class="open-column-button"></div>
+                    </label>
+                </div>
+
+                <div class="section-content" id="restoringABrokenWiFiConnection-content">
+                    <!-- The input tag to open/close the container used to be here -->
+                    <header class="tut-Header">
+                        <h4 class="tutorialTitle">Restoring a Broken Wi-Fi Connection</h4>
+                        <h5 class="tutorialTitle-edition">Chromebook Edition</h5>
+                    </header>
+
+                    <div class="tutStep">
+                        <header class="tutStepHeader">
+                            <p>01 <span>of 02</span></p>
+                            <h6>Locate &amp; Select Network</h6>
+                        </header>
+
+                        <figure>
+                            <img src="images/troubleshooting/connectingCent-firstStep01.jpg" alt="The following is an image that explains step #1. For the first step in connecting to Centinela Wi-Fi on a chromebook, click on the small panel in the bottom right corner in order to ope the control center shown in the next step"
+                                class="img-responsive tutImage" />
+                            <img src="images/troubleshooting/connectingCent-firstStep02.jpg" alt="The following is an image that explains step #2. For the second step in connecting to Centinela Wi-Fi pn a chromebook, click on the network called 'Centinela.'" class="img-responsive tutImage"
+                            />
+                            <figcaption class="tutImageCaption">Click on the small panel in the bottom right &uarr; corner in order to open the control center shown above</figcaption>
+                        </figure>
+                    </div>
+
+                    <div class="tutStep">
+                        <header class="tutStepHeader">
+                            <p>02 <span>of 02</span></p>
+                            <h6>Forget Network &amp; Reconnect</h6>
+                        </header>
+                        <img src="images/troubleshooting/connectingCent-secondStep01.jpg" alt="The following is an image that explains step #3. For the third and final step in connecting to Centinela Wi-Fi, set PEAP as your EAP method, MSCHAPv2 as your Phase 2 authentication mode, and be sure to click the option named 'do not check' in the Server CA certificate. Then for the identity and password fields, provide your username and password. Then hit connect!"
+                            class="img-responsive tutImage" />
+                    </div>
+                    <p class="tut-descr">Once you have followed all the steps to forget a network, please refer to the <a href="">Connecting to Centinela WiFi tutorial</a> in order to reconnect.
+                    </p>
+                    <a class="dlTutLink" href="tutorialPDFs/Forgetting_Network_Chromebook.pdf"><button type="button" class="tutDLButton">Download this Tutorial (PDF)</button></a>
+
+                </div>
+            </div>
+        </section>
+
+        <section class="blue-section troubleshooting">
+            <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="connectingToCentinela-collapseToggle">
             <div class="blue-section-innerContainer">
                 <div class="section-header">
                     <h3>Connecting to Centinela Wi-Fi</h3>
-                    <label for="quickLinks-collapseToggle">
+                    <label for="connectingToCentinela-collapseToggle">
                         <div class="open-column-button"></div>
                     </label>
                 </div>
@@ -128,59 +176,18 @@
             </div>
         </section>
 
-        <!-- <section class="blue-section" id="quickLinks-blueSection">
-            <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="quickLinks-collapseToggle">
-            <div class="section-header">
-                <h3>Restoring a Broken Wi-Fi Connection</h3>
-                <label for="quickLinks-collapseToggle">
-                        <div class="open-column-button"></div>
-                    </label>
-            </div>
-            <div class="row button-row centWiFiTut" id="quickLinksButtonRow">
-                <header>
-                    <h4 class="tutorialTitle">Restoring a Broken Wi-Fi Connection</h4>
-                    <h5 class="tutorialTitle-edition">Chromebook Edition</h5>
-                </header>
-
-                <div class="tutStep">
-                    <header class="tutStepHeader">
-                        <p>01 <span>of 02</span></p>
-                        <h6>Locate &amp; Select Network</h6>
-                    </header>
-
-                    <figure>
-                        <img src="images/troubleshooting/connectingCent-firstStep01.jpg" alt="The following is an image that explains step #1. For the first step in connecting to Centinela Wi-Fi on a chromebook, click on the small panel in the bottom right corner in order to ope the control center shown in the next step"
-                            class="img-responsive tutImage" />
-                        <img src="images/troubleshooting/connectingCent-firstStep02.jpg" alt="The following is an image that explains step #2. For the second step in connecting to Centinela Wi-Fi pn a chromebook, click on the network called 'Centinela.'" class="img-responsive tutImage"
-                        />
-                        <figcaption class="tutImageCaption">Click on the small panel in the bottom right &uarr; corner in order to open the control center shown above</figcaption>
-                    </figure>
-                </div>
-
-                <div class="tutStep">
-                    <header class="tutStepHeader">
-                        <p>02 <span>of 02</span></p>
-                        <h6>Forget Network &amp; Reconnect</h6>
-                    </header>
-                    <img src="images/troubleshooting/connectingCent-secondStep01.jpg" alt="The following is an image that explains step #3. For the third and final step in connecting to Centinela Wi-Fi, set PEAP as your EAP method, MSCHAPv2 as your Phase 2 authentication mode, and be sure to click the option named 'do not check' in the Server CA certificate. Then for the identity and password fields, provide your username and password. Then hit connect!"
-                        class="img-responsive tutImage" />
-                </div>
-                <a class="dlTutLink" href="tutorialPDFs/Connecting_to_Centinela_WiFi_Chromebook.pdf"><button type="button" class="tutDLButton">Download this Tutorial</button></a>
-            </div>
-        </section> -->
-
         <section class="blue-section" id="allTools-blueSection">
             <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="webAdmin-collapseToggle">
             <div class="section-header">
                 <h3>ALL LINKS</h3>
                 <label for="webAdmin-collapseToggle">
-                            <div class="open-column-button"></div>
-                        </label>
+                <div class="open-column-button"></div>
+            </label>
             </div>
             <!-- <div class="row button-row admin-links" id="webAdminButtonRow"> -->
             <div class="row admin-links" id="webAdminButtonRow">
                 <iframe class="google-sheet" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vSW-9fpf8zhznBa1SnLZGsPPI6Bl0QVwE4Ntacetz42sKK0tH0emoPjPMqoiSJInaM3iysG56Ia-bYa/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false">
-                    </iframe>
+            </iframe>
             </div>
         </section>
     </div>
