Added images to the restoring a broken wi-fi connection tutorial

--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -107,9 +107,9 @@
                         </header>
 
                         <figure>
-                            <img src="images/troubleshooting/connectingCent-firstStep01.jpg" alt="The following is an image that explains step #1. For the first step in connecting to Centinela Wi-Fi on a chromebook, click on the small panel in the bottom right corner in order to ope the control center shown in the next step"
+                            <img src="images/troubleshooting/restNetWk-Step01.jpg" alt="The following is an image that explains step #1. For the first step in connecting to Centinela Wi-Fi on a chromebook, click on the small panel in the bottom right corner in order to ope the control center shown in the next step"
                                 class="img-responsive tutImage" />
-                            <img src="images/troubleshooting/connectingCent-firstStep02.jpg" alt="The following is an image that explains step #2. For the second step in connecting to Centinela Wi-Fi pn a chromebook, click on the network called 'Centinela.'" class="img-responsive tutImage"
+                            <img src="images/troubleshooting/restNetWk-Step01-2.jpg" alt="The following is an image that explains step #2. For the second step in connecting to Centinela Wi-Fi pn a chromebook, click on the network called 'Centinela.'" class="img-responsive tutImage"
                             />
                             <figcaption class="tutImageCaption">Click on the small panel in the bottom right &uarr; corner in order to open the control center shown above</figcaption>
                         </figure>
@@ -120,7 +120,9 @@
                             <p>02 <span>of 02</span></p>
                             <h6>Forget Network &amp; Reconnect</h6>
                         </header>
-                        <img src="images/troubleshooting/connectingCent-secondStep01.jpg" alt="The following is an image that explains step #3. For the third and final step in connecting to Centinela Wi-Fi, set PEAP as your EAP method, MSCHAPv2 as your Phase 2 authentication mode, and be sure to click the option named 'do not check' in the Server CA certificate. Then for the identity and password fields, provide your username and password. Then hit connect!"
+                        <img src="images/troubleshooting/restNetWk-Step02-1.jpg" alt="The following is an image that explains step #3. For the third and final step in connecting to Centinela Wi-Fi, set PEAP as your EAP method, MSCHAPv2 as your Phase 2 authentication mode, and be sure to click the option named 'do not check' in the Server CA certificate. Then for the identity and password fields, provide your username and password. Then hit connect!"
+                            class="img-responsive tutImage" />
+                        <img src="images/troubleshooting/restNetWk-Step02-2.jpg" alt="The following is an image that explains step #3. For the third and final step in connecting to Centinela Wi-Fi, set PEAP as your EAP method, MSCHAPv2 as your Phase 2 authentication mode, and be sure to click the option named 'do not check' in the Server CA certificate. Then for the identity and password fields, provide your username and password. Then hit connect!"
                             class="img-responsive tutImage" />
                     </div>
                     <p class="tut-descr">Once you have followed all the steps to forget a network, please refer to the <a href="">Connecting to Centinela WiFi tutorial</a> in order to reconnect.
