--- a/troubleshooting.html
+++ b/troubleshooting.html
@@ -107,11 +107,11 @@
                         </header>
 
                         <figure>
-                            <img src="images/troubleshooting/restNetWk-Step01.jpg" alt="The following is an image that explains step #1. For the first step in connecting to Centinela Wi-Fi on a chromebook, click on the small panel in the bottom right corner in order to ope the control center shown in the next step"
+                            <img src="images/troubleshooting/restNetWk-Step01.jpg" alt="The following is an image that explains step #1. For the first step in forgetting to Centinela Wi-Fi on a chromebook, click on the small panel in the bottom right corner in order to open the control center shown in this image. Click on 'connected to centinela.'"
                                 class="img-responsive tutImage" />
-                            <img src="images/troubleshooting/restNetWk-Step01-2.jpg" alt="The following is an image that explains step #2. For the second step in connecting to Centinela Wi-Fi pn a chromebook, click on the network called 'Centinela.'" class="img-responsive tutImage"
-                            />
-                            <figcaption class="tutImageCaption">Click on the small panel in the bottom right &uarr; corner in order to open the control center shown above</figcaption>
+                            <img src="images/troubleshooting/restNetWk-Step01-2.jpg" alt="The following is an image that explains step #2. For the second step in forgetting to Centinela Wi-Fi on a chromebook, click on the network called 'centinela.' You may have to double click."
+                                class="img-responsive tutImage" />
+                            <figcaption class="tutImageCaption imagecaptionLeftAlign">Click on the small panel in the bottom right corner in order to open the control center shown above.</figcaption>
                         </figure>
                     </div>
 
@@ -120,12 +120,16 @@
                             <p>02 <span>of 02</span></p>
                             <h6>Forget Network &amp; Reconnect</h6>
                         </header>
-                        <img src="images/troubleshooting/restNetWk-Step02-1.jpg" alt="The following is an image that explains step #3. For the third and final step in connecting to Centinela Wi-Fi, set PEAP as your EAP method, MSCHAPv2 as your Phase 2 authentication mode, and be sure to click the option named 'do not check' in the Server CA certificate. Then for the identity and password fields, provide your username and password. Then hit connect!"
-                            class="img-responsive tutImage" />
-                        <img src="images/troubleshooting/restNetWk-Step02-2.jpg" alt="The following is an image that explains step #3. For the third and final step in connecting to Centinela Wi-Fi, set PEAP as your EAP method, MSCHAPv2 as your Phase 2 authentication mode, and be sure to click the option named 'do not check' in the Server CA certificate. Then for the identity and password fields, provide your username and password. Then hit connect!"
-                            class="img-responsive tutImage" />
+                        <figure>
+                            <img src="images/troubleshooting/restNetWk-Step02-1.jpg" alt="The following is an image that explains the first part of step #2 of restoring a broken wi-fi connection. The follwing image mandates the user to click on the forget network button." class="img-responsive tutImage"
+                            />
+                            <img src="images/troubleshooting/restNetWk-Step02-2.jpg" alt="The following is an image that explains second part of step #2 of restoring a broken wi-fi connection. The follwing image mandates the user to reconnect to the centinela network after hitting forgetting it."
+                                class="img-responsive tutImage" />
+                            <figcaption class="tutImageCaption imagecaptionLeftAlign">Once in the settings menu for the centinela network. click on 'forget' to forget the network. Afterwards, reconnect.</figcaption>
+                        </figure>
+
                     </div>
-                    <p class="tut-descr">Once you have followed all the steps to forget a network, please refer to the <a href="">Connecting to Centinela WiFi tutorial</a> in order to reconnect.
+                    <p class="tut-descr">Once you have followed all the steps to forget a network, please refer to the <a href="#connectingToCentinela-content" class="tutRef">Connecting to Centinela WiFi tutorial</a> in order to reconnect.
                     </p>
                     <a class="dlTutLink" href="tutorialPDFs/Forgetting_Network_Chromebook.pdf"><button type="button" class="tutDLButton">Download this Tutorial (PDF)</button></a>
 
@@ -170,8 +174,12 @@
                             <p>02 <span>of 02</span></p>
                             <h6>Enter Credentials &amp; Connect</h6>
                         </header>
-                        <img src="images/troubleshooting/connectingCent-secondStep01.jpg" alt="The following is an image that explains step #3. For the third and final step in connecting to Centinela Wi-Fi, set PEAP as your EAP method, MSCHAPv2 as your Phase 2 authentication mode, and be sure to click the option named 'do not check' in the Server CA certificate. Then for the identity and password fields, provide your username and password. Then hit connect!"
-                            class="img-responsive tutImage" />
+                        <figure>
+                            <img src="images/troubleshooting/connectingCent-secondStep01.jpg" alt="The following is an image that explains step #3. For the third and final step in connecting to Centinela Wi-Fi, set PEAP as your EAP method, MSCHAPv2 as your Phase 2 authentication mode, and be sure to click the option named 'do not check' in the Server CA certificate. Then for the identity and password fields, provide your username and password. Then hit connect!"
+                                class="img-responsive tutImage" />
+                            <figcaption class="tutImageCaption">The following is an image that explains step #3. For the third and final step in connecting to Centinela Wi-Fi, set PEAP as your EAP method, MSCHAPv2 as your Phase 2 authentication mode, and be sure to click the option named
+                                'do not check' in the Server CA certificate. Then for the identity and password fields, provide your username and password. Then hit connect!"</figcaption>
+                        </figure>
                     </div>
                     <a class="dlTutLink" href="tutorialPDFs/Connecting_to_Centinela_WiFi_Chromebook.pdf"><button type="button" class="tutDLButton">Download this Tutorial (PDF)</button></a>
                 </div>
