Added an InfoSnap button to the administrative tools section of the staff portal.

--- a/staff.html
+++ b/staff.html
@@ -43,7 +43,7 @@
                         <a href="#standardStaffTools-blueSection">Standard Staff Tools</a>
                     </li>
                     <li class="mobile-collapse-links">
-                        <a href="#administratorTools-blueSection">Administrator Tools</a>
+                        <a href="#administratorTools-blueSection">Administrative Tools</a>
                     </li>
                     <li class="mobile-collapse-links">
                         <a href="#teacherTools-blueSection">Teacher Tools</a>
@@ -136,11 +136,10 @@
             </div>
         </section>
 
-
         <section class="blue-section" id="administratorTools-blueSection">
             <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="administratorTools-collapseToggle">
             <div class="section-header">
-                <h3>Administrator Tools</h3>
+                <h3>Administrative Tools</h3>
                 <label for="administratorTools-collapseToggle">
                         <div class="open-column-button"></div>
                 </label>
@@ -149,6 +148,7 @@
                 <a href="https://www.blackboardconnect.com/signin/default.aspx" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/BB-Admin.png" alt="Blackboard Connect - Admin (Parent Communication)"></button></a>
                 <a href="https://powerschool.centinela.k12.ca.us/admin" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/PS.png" alt="PowerSchool - Admin"></button></a>
                 <a href="http://cvsmarte/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/smartetools.png" alt="SmarteTools"></button></a>
+                <a href="https://secure.infosnap.com/admin/login/login.rails?ReturnUrl=%2fadmin"><button><img class="img-responsive" href="" src="images/buttons/infosnap.png" alt="InfoSnap"/></button></a>
             </div>
         </section>
 
