--- a/staff.html
+++ b/staff.html
@@ -148,7 +148,7 @@
                 <a href="https://www.blackboardconnect.com/signin/default.aspx" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/BB-Admin.png" alt="Blackboard Connect - Admin (Parent Communication)"></button></a>
                 <a href="https://powerschool.centinela.k12.ca.us/admin" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/PS.png" alt="PowerSchool - Admin"></button></a>
                 <a href="http://cvsmarte/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/smartetools.png" alt="SmarteTools"></button></a>
-                <a href="https://secure.infosnap.com/admin/login/login.rails?ReturnUrl=%2fadmin"><button><img class="img-responsive" href="" src="images/buttons/infosnap.png" alt="InfoSnap"/></button></a>
+                <a href="https://secure.infosnap.com/admin/login/login.rails?ReturnUrl=%2fadmin" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/infosnap.png" alt="InfoSnap"/></button></a>
             </div>
         </section>
 
