Delete unnnecessary javascript folder. Add new buttons and site links.

--- a/staff.html
+++ b/staff.html
@@ -97,6 +97,7 @@
                     <a href="https://centinela.instructure.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/canvas.png" alt="Canvas (Learning Management System)"></button></a>
                     <a href="https://centinela.illuminateed.com/dna/?prev_page=Main_NotDashboardPage&amp;page=SisLogin" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/illuminate.png" alt="Illuminate (Assessments)" title="Illuminate (Assessments)"></button></a>
                     <a href="https://access.heropowered.com/login/centinelavalley-usd" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/hero.png" alt="Hero (PBIS System)"  title="Hero (PBIS System)"></button></a>
+                    <a href="https://asp.schoolmessenger.com/centinela" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/schoolmessenger-button.png" alt="School Messenger"  title="School Messenger"></button></a>
                 </div>
                 <div>
                     <a href="https://powerschool.centinela.k12.ca.us/teachers/pw.html" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/PT.png" alt="PowerSchool Teacher" alt="PowerSchool Teacher"></button></a>
@@ -106,7 +107,9 @@
                     <a href="https://helpdesk.centinela.k12.ca.us" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/helpdesk.png" alt="Helpdesk (CV It Department)"></button></a>
                     <a href="https://portal.office.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/office365.png" alt="Office 365 Login"></button></a>
                 </div>
-
+			<a href="https://www.californiacolleges.edu/#/user-login" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/ccgi-logo.png" alt="California College Guidance Initiative" style="width:316px; height: 100px;"></button></a>
+		<div>
+		</div>
             </div>
         </section>
 
@@ -126,12 +129,14 @@
                         target="_blank"><button><img class="img-responsive" href="" src="images/buttons/google-drive.png" alt="Google Drive Button"></button></a>
                     <a href="https://helpdesk.centinela.k12.ca.us" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/helpdesk.png" alt="Helpdesk (CV It Department)"></button></a>
                     <a href="https://sso.centinela.k12.ca.us/adfs/ls/?wa=wsignin1.0&amp;wtrealm=https%3a%2f%2fmail.centinela.k12.ca.us%2fowa%2f&amp;wctx=rm%3d0%26id%3dpassive%26ru%3d%252fowa%252f&amp;wct=2017-08-21T18%3a05%3a05Z" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/outlook.png" alt="Outlook Email"></button></a>
+                    <a href="https://asp.schoolmessenger.com/centinela" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/schoolmessenger-button.png" alt="School Messenger"  title="School Messenger"></button></a>
                 </div>
 
                 <div>
                     <a href="https://updatemanager:9251/showLogin.cc" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/password-portal.png" alt="Password Assistance"></button></a>
                     <a href="https://cvprintcenter.myprintdesk.net/DSF/smartstore.aspx#!/Storefront" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/print-center.png" alt="Print Center"></button></a>
                     <a href="https://login.schooldude.com/mlogin?productid=community" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/school-dude.png" alt="School Dude"></button></a>
+                    <a href="https://siaesolutions.com/portal/?app=behavioralert" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/behavior-alert.png" alt="Behavior Alert" /></button></a>
                 </div>
             </div>
         </section>
@@ -145,9 +150,9 @@
                 </label>
             </div>
             <div class="row button-row" id="administratorToolsButtonRow">
-                <a href="https://www.blackboardconnect.com/signin/default.aspx" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/BB-Admin.png" alt="Blackboard Connect - Admin (Parent Communication)"></button></a>
+                <!-- <a href="https://www.blackboardconnect.com/signin/default.aspx" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/BB-Admin.png" alt="Blackboard Connect - Admin (Parent Communication)"></button></a> -->
                 <a href="https://powerschool.centinela.k12.ca.us/admin" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/PS.png" alt="PowerSchool - Admin"></button></a>
-                <a href="http://cvsmarte/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/smartetools.png" alt="SmarteTools"></button></a>
+                <a href="https://Smartetools.centinela.k12.ca.us/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/smartetools.png" alt="SmarteTools"></button></a>
                 <a href="https://secure.infosnap.com/admin/login/login.rails?ReturnUrl=%2fadmin" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/infosnap.png" alt="InfoSnap"/></button></a>
             </div>
         </section>
@@ -163,7 +168,7 @@
             <div class="row button-row" id="teacherToolsButtonRow">
                 <div>
                     <a href="https://login.frontlineeducation.com/login?signin=2016ab4880f0c15acd277b718071c1fd&amp;productId=ABSMGMT&amp;clientId=ABSMGMT#/login" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/aesop.png" alt="Frontline (Absence Management/Subfinder)"></button></a>
-                    <a href="https://teacher.blackboardconnected.com/Login.aspx" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/BB-Teacher.png" alt="Blackboard Connect - Teacher: (Parent Communication)"></button></a>
+                    <!-- <a href="https://teacher.blackboardconnected.com/Login.aspx" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/BB-Teacher.png" alt="Blackboard Connect - Teacher: (Parent Communication)"></button></a> -->
                     <a href="https://drive.google.com/drive/folders/0B8DM6hczyKMbfkNvaU9LS3lLanpkS09GTExmTjR3TW0tZzBDYjlZd0ZRNkZKQUpHdERSZ28?usp=sharing" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/CVUHSD-Course-Resources.png" alt="CVUHSD Course Resources (Google Drive)"></button></a>
                 </div>
                 <div>
@@ -212,9 +217,9 @@
             </div>
             <div class="row button-row" id="learningToolsButtonRow">
                 <a href="https://www.brainpop.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/BrainPop.png" alt="BrainPop"></button></a>
-                <a href="http://hwread180:55880/slms/EducatorAccess" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Read180HW-Teacher.png" alt="Read 180/System 44-HW Teacher"></button></a>
-                <a href="http://lwread180:55880/slms/EducatorAccess" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Read180LW-Teacher.png" alt="Read 180/System 44-LW Teacher"></button></a>
-                <a href="http://lzread180:55880/slms/EducatorAccess" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Read180LZ-Teacher.png" alt="Read 180/System 44-LZ Teacher"></button></a>
+                <a href="https://hwread180.centinela.k12.ca.us:56243/slms/EducatorAccess" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Read180HW-Teacher.png" alt="Read 180/System 44-HW Teacher"></button></a>
+                <a href="https://lwread180.centinela.k12.ca.us:56243/slms/EducatorAccess" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Read180LW-Teacher.png" alt="Read 180/System 44-LW Teacher"></button></a>
+                <a href="https://lzread180.centinela.k12.ca.us:56243/slms/EducatorAccess" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Read180LZ-Teacher.png" alt="Read 180/System 44-LZ Teacher"></button></a>
                 <a href="https://schools.shmoop.com/login/centinela-valley-UHSD" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/shmoop.png" alt="Shmoop"></button></a>
             </div>
         </section>
@@ -243,13 +248,14 @@
             </div>
             <div class="row button-row" id="mediaResourcesButtonRow">
                 <div>
-                    <a href="http://cvod.infobase.com/p_Home.aspx" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/CVOD.png" alt="Classroom Video on Demand (Educational Video Streaming)"></button></a>
+                    <a href="http://cvod.infobase.com/p_Home.aspx" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/CVOD.png" alt="Classroom Video on Demand (Educational Video Streaming)" width="316" style="width: 316px;"></button></a>
                     <a href="http://destiny.centinela.k12.ca.us/" target="_blank"><button><img class="img-responsive nonButtonImages" href="" src="images/buttons/Destiny.png" alt="Destiny"></button></a>
                     <a href="http://search.ebscohost.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/EBSCO.png" alt="EBSCO (Research Databases)"></button></a>
                     <a href="http://centinela.lib.overdrive.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Overdrive.png" alt="Overdrive (Ebooks)"></button></a>
                 </div>
 
                 <div>
+		    <a href="http://media.lacoe.edu" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/lacoe-media.jpg" alt="LACOE" style="width: 316px;"/></button/></a>
                     <a href="http://web.b.ebscohost.com/eon/search/basic?sid=a4eca46f-31e5-4e5b-a010-c8e57da30aeb%40sessionmgr102&amp;vid=0&amp;hid=125" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/FlipsterLW.png" alt="Flipster LW (E-Magazines)"></button></a>
                     <a href="http://web.b.ebscohost.com/eon/search/basic?sid=a4eca46f-31e5-4e5b-a010-c8e57da30aeb%40sessionmgr102&amp;vid=0&amp;hid=125" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/FlipsterLZ.png" alt="Flipster LZ (E-Magazines)"></button></a>
                     <a href="http://web.b.ebscohost.com/eon/search/basic?sid=10e9224c-4ef8-4d69-805f-55d64d31a26f%40sessionmgr103&amp;vid=0&amp;hid=125" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/FlipsterHW.png" alt="Flipster HW (E-Magazines)"></button></a>
