--- a/student.html
+++ b/student.html
@@ -86,7 +86,8 @@
                 <a href="https://accounts.google.com/signin/v2/sl/pwd?service=wise&amp;passive=1209600&amp;osid=1&amp;continue=https%3A%2F%2Fdrive.google.com%2F&amp;followup=https%3A%2F%2Fdrive.google.com%2F&amp;emr=1&amp;flowName=GlifWebSignIn&amp;flowEntry=ServiceLogin"
                     target="_blank"><button><img class="img-responsive" href="" src="images/buttons/google-drive.png" alt="Google Drive Button"></button></a>
                 <a href="https://centinela.instructure.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/canvas.png" alt="Canvas (Learning Management System)"></button></a>
-            </div>
+            	<a href="https://www.californiacolleges.edu/#/user-login" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/ccgi-logo.png" alt="California College Guidance Initiative" width="316px" height="100px" style="width:316px; height: 100px;"></button></a>
+	     </div>
         </section>
 
         <section class="blue-section" id="standardStaffTools-blueSection">
@@ -118,7 +119,7 @@
             <div class="row button-row" id="classroomProgramsButtonRow">
                 <a href="https://centinela.instructure.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/canvas.png" alt="Canvas (Learning Management System)"></button></a>
                 <a href="https://centinela.learn.edgenuity.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/edgenuity.png" alt="Edgenuity (Online Courses)"></button></a>
-                <a href="https://centinela.illuminateed.com/dna/?prev_page=Main_NotDashboardPage&amp;page=SisLogin" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Illuminate-Student.png" alt="Illuminate Student Portal"></button></a>
+                <a href="https://centinela.illuminatehc.com/login" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Illuminate-Student.png" alt="Illuminate Student Portal"></button></a>
                 <a href="https://powerschool.centinela.k12.ca.us/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/PS-student.png" alt="PowerSchool Student/Parent Portal"></button></a>
                 <a href="https://turnitin.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/turnitin.png" alt="TurnItIn.com (Originality Check &amp; Feedback)"></button></a>
             </div>
@@ -134,9 +135,9 @@
             </div>
             <div class="row button-row" id="learningToolsButtonRow">
                 <a href="https://www.brainpop.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/BrainPop.png" alt="BrainPop"></button></a>
-                <a href="http://hwread180:55880/slms/StudentAccess" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Read180HW-Student.png" alt="Read 180/System 44-HW Teacher"></button></a>
-                <a href="http://lwread180:55880/slms/StudentAccess" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Read180LW-Student.png" alt="Read 180/System 44-LW Teacher"></button></a>
-                <a href="http://lzread180:55880/slms/StudentAccess" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Read180LZ-Student.png" alt="Read 180/System 44-LZ Teacher"></button></a>
+                <a href="https://hwread180.centinela.k12.ca.us:56243/slms/StudentAccess" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Read180HW-Student.png" alt="Read 180/System 44-HW Teacher"></button></a>
+                <a href="https://lwread180.centinela.k12.ca.us:56243/slms/StudentAccess" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Read180LW-Student.png" alt="Read 180/System 44-LW Teacher"></button></a>
+                <a href="https://lzread180.centinela.k12.ca.us:56243/slms/StudentAccess" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Read180LZ-Student.png" alt="Read 180/System 44-LZ Teacher"></button></a>
                 <a href="https://schools.shmoop.com/login/centinela-valley-UHSD" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/shmoop.png" alt="Shmoop"></button></a>
             </div>
         </section>
