Uncheck system statuses

--- a/staff.html
+++ b/staff.html
@@ -83,21 +83,20 @@
             </header>
         </div>
 
-        <section class="blue-section" id="systemStatuses-blueSection">
-            <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="systemStatuses-collapseToggle" checked="">
-            <div class="section-header">
-                <h3>System Statuses</h3>
-                <label for="systemStatuses-collapseToggle">
-                    <div class="open-column-button"></div>
-                </label>
-            </div>
-            <div class="row button-row" id="systemStatusesButtonRow">
-            <iframe src='https://www.site24x7.com/sv.do?id=-lTskTIBFC99AjBdJTzdd22ylcZvGBYnfGhcgwvt1-27W89lFFvf7WICSx8TdzUT6kB92hYLWdGYIInKaxcmHcJTzDPBf7IFLjpWmnUEJ18%3D&st=false' scrolling='yes' align='center' height='400' width='1000' border='0' frameborder='0'></iframe>
-            </div>
-        </section>
-
-        
         <div class="page-content">
+        <section class="blue-section" id="systemStatuses-blueSection">
+                <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="systemStatuses-collapseToggle">
+                <div class="section-header">
+                    <h3>Systems' Statuses</h3>
+                    <label for="systemStatuses-collapseToggle">
+                        <div class="open-column-button"></div>
+                    </label>
+                </div>
+                <div class="row button-row" id="systemStatusesButtonRow">
+                    <iframe class="statusEmbed" src='https://www.site24x7.com/sv.do?id=-lTskTIBFC99AjBdJTzdd22ylcZvGBYnfGhcgwvt1-27W89lFFvf7WICSx8TdzUT6kB92hYLWdGYIInKaxcmHcJTzDPBf7IFLjpWmnUEJ18%3D&st=false' scrolling='yes'></iframe>
+                </div>
+            </section>
+
             <section class="blue-section" id="quickLinks-blueSection">
                 <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="quickLinks-collapseToggle" checked="">
                 <div class="section-header">
@@ -328,7 +327,6 @@
                 </div>
             </section>
         </div>
-      
     </div> 
     <!-- /. container-fluid -->
     <div class="scrollArrow" title="Back to top">
