Change blue section with the system statuses' header title.

--- a/staff.html
+++ b/staff.html
@@ -87,7 +87,7 @@
         <section class="blue-section" id="systemStatuses-blueSection">
                 <input type="checkbox" class="checkbox-hack blueSection-collapseToggle" id="systemStatuses-collapseToggle">
                 <div class="section-header">
-                    <h3>Systems' Statuses</h3>
+                    <h3>System Statuses</h3>
                     <label for="systemStatuses-collapseToggle">
                         <div class="open-column-button"></div>
                     </label>
