Create and add Everfi button to student and staff portals.

--- a/student.html
+++ b/student.html
@@ -134,11 +134,16 @@
                 </label>
             </div>
             <div class="row button-row" id="learningToolsButtonRow">
-                <a href="https://www.brainpop.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/BrainPop.png" alt="BrainPop"></button></a>
-                <a href="https://hwread180.centinela.k12.ca.us:56243/slms/StudentAccess" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Read180HW-Student.png" alt="Read 180/System 44-HW Teacher"></button></a>
-                <a href="https://lwread180.centinela.k12.ca.us:56243/slms/StudentAccess" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Read180LW-Student.png" alt="Read 180/System 44-LW Teacher"></button></a>
-                <a href="https://lzread180.centinela.k12.ca.us:56243/slms/StudentAccess" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Read180LZ-Student.png" alt="Read 180/System 44-LZ Teacher"></button></a>
-                <a href="https://schools.shmoop.com/login/centinela-valley-UHSD" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/shmoop.png" alt="Shmoop"></button></a>
+                <div>
+                    <a href="https://www.brainpop.com/" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/BrainPop.png" alt="BrainPop"></button></a>
+                    <a href="https://hwread180.centinela.k12.ca.us:56243/slms/StudentAccess" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Read180HW-Student.png" alt="Read 180/System 44-HW Teacher"></button></a>
+                    <a href="https://lwread180.centinela.k12.ca.us:56243/slms/StudentAccess" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Read180LW-Student.png" alt="Read 180/System 44-LW Teacher"></button></a>
+                </div>
+                <div>
+                    <a href="https://lzread180.centinela.k12.ca.us:56243/slms/StudentAccess" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/Read180LZ-Student.png" alt="Read 180/System 44-LZ Teacher"></button></a>
+                    <a href="https://schools.shmoop.com/login/centinela-valley-UHSD" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/shmoop.png" alt="Shmoop"></button></a>
+                    <a href="https://clever.com/oauth/instant-login?client_id=2b024c690549687be970&district_id=5283beba2c067cd50b000031" target="_blank"><button><img class="img-responsive" href="" src="images/buttons/everfi.jpg" alt="Everfi"></button></a>   
+                </div>
             </div>
         </section>
 
