Attempting to fetch...

--- a/staff.html
+++ b/staff.html
@@ -340,6 +340,8 @@
             <i class="fa fa-arrow-up" aria-hidden="true"></i>
         </a>
     </div>
+    <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
+    <script src="js/bundle.js"></script>
 </body>
 
 </html>
